Updated .gitignore; exclude .gradle directory

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ docs/
 src/main/webapp/data/
 src/main/webapp/WEB-INF/classes
 src/main/webapp/WEB-INF/lib
+.gradle/
 #
 # individual files
 # ----------------
