--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xmlns="http://java.sun.com/xml/ns/javaee" 
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-         http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
-         version="3.0">
+<web-app version="3.0"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" >
+
   <!-- The bare minimum needed for JSF 2.2 is a servlet 2.5 or later
        declaration (this uses 3.0) and the mapping for the FacesServlet.
        Setting PROJECT_STAGE to Development is highly recommended
@@ -12,11 +12,11 @@
        (default) or client-side is a more complicated question:
        client-side uses more bandwidth but fewer server resources.
        Client-side also helps to avoid the dreaded view expired exceptions.
-      
-       From JSF 2 and PrimeFaces tutorial 
+
+       From JSF 2 and PrimeFaces tutorial
        at http://www.coreservlets.com/JSF-Tutorial/jsf2/
   -->
-  
+
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -27,16 +27,16 @@
     <url-pattern>*.xhtml</url-pattern>
     <url-pattern>*.jsf</url-pattern>
   </servlet-mapping>
-  
+
   <context-param>
     <param-name>javax.faces.PROJECT_STAGE</param-name>
     <param-value>Development</param-value>
   </context-param>
-  
+
   <context-param>
     <description>State saving method: 'client' or 'server' (default). See JSF Specification section 2.5.2</description>
     <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-    <param-value>client</param-value>
+    <param-value>server</param-value>
   </context-param>
 
   <!-- bean validation -->
@@ -45,8 +45,8 @@
           javax.faces.INTERPRET_EMPTY_STRING_SUBMITTED_VALUES_AS_NULL
       </param-name>
       <param-value>true</param-value>
-  </context-param> 
-  
+  </context-param>
+
   <!-- Prime Faces Configuration -->
   <!-- enable/set theme -->
   <context-param>
@@ -59,7 +59,7 @@
     <param-name>primefaces.CLIENT_SIDE_VALIDATION</param-name>
     <param-value>true</param-value>
   </context-param>
-  
+
   <!-- If you go to http://host/project/ (with no file name), it will
        try index.jsf first, welcome.jsf next, and so forth.
    -->
