--- a/build.xml
+++ b/build.xml
@@ -18,12 +18,10 @@
   <property name="src.home"      value="${basedir}/src/main/java"/>
   <property name="web.home"      value="${basedir}/src/main/webapp"/>
   <property name="server.home"   value="/home/richs/bin/tomcat7" />
+  <property name="groovy.src"    value="${basedir}/src/main/groovy" />
 
 <!-- ==================== External Dependencies =========================== -->
-
-
 <!--
-
   Use property values to define the locations of external JAR files on which
   your application will depend.  In general, these values will be used for
   two purposes:
@@ -35,7 +33,6 @@
   exposes to web applications, we will not need to explicitly list any of those
   dependencies.  You only need to worry about external dependencies for JAR
   files that you are going to include inside your "/WEB-INF/lib" directory.
-
 -->
 
 <!-- Dummy external dependency -->
@@ -45,33 +42,13 @@
 -->
 
 
-<!-- ==================== Compilation Classpath =========================== -->
-
+<!-- compilation classpath -->
 <!--
-
-  Rather than relying on the CLASSPATH environment variable, Ant includes
-  features that makes it easy to dynamically construct the classpath you
-  need for each compilation.  The example below constructs the compile
-  classpath to include the servlet.jar file, as well as the other components
-  that Tomcat makes available to web applications automatically, plus anything
-  that you explicitly added.
-
+  The compilation path includes both the server lib directory and the webapp
+  WEB-INF/lib directory.
 -->
 
   <path id="compile.classpath">
-
-    <!-- Include all JAR files that will be included in /WEB-INF/lib -->
-    <!-- *** CUSTOMIZE HERE AS REQUIRED BY YOUR APPLICATION *** -->
-<!--
-    <pathelement location="${foo.jar}"/>
--->
-
-    <!-- Include all elements that web server exposes to applications -->
-<!--
-    <fileset dir="${catalina.home}/bin">
-      <include name="*.jar"/>
-    </fileset>
--->
     <pathelement location="${server.home}/lib"/>
     <fileset dir="${server.home}/lib">
       <include name="*.jar"/>
@@ -81,35 +58,33 @@
     </fileset>
   </path>
 
-
-<!--  ======= Compilation Control Options ======= -->
-
+<!-- compilation control options ======= -->
 <!--
-
   These properties control option settings on the Javac compiler when it
   is invoked using the <javac> task.
 
   compile.debug        Should compilation include the debug option?
-
   compile.deprecation  Should compilation include the deprecation option?
-
 -->
-
-  <property name="compile.debug"       value="true"/>
-  <property name="compile.deprecation" value="false"/>
+    <property name="compile.debug"       value="true"/>
+    <property name="compile.deprecation" value="false"/>
 
 <!--
-  The folowing was added after getting this warning message:
+    The folowing was added after getting this warning message:
 
-    warning: 'includeantruntime' was not set, defaulting to
-    build.sysclasspath=last; set to false for repeatable builds
+      warning: 'includeantruntime' was not set, defaulting to
+      build.sysclasspath=last; set to false for repeatable builds
 -->
-  <presetdef name="hit.javac">
-    <javac includeantruntime="false" />
-  </presetdef>
+    <presetdef name="hit.javac">
+      <javac includeantruntime="false" />
+    </presetdef>
 
-<!-- ======= help target ======= -->
+<!-- ===== Groovy compile task ===== -->
+  <taskdef name="groovyc" classname="org.codehaus.groovy.ant.Groovyc"
+    classpathref="compile.classpath"/>
 
+
+<!-- ===== Help Target ===== -->
   <target name="help"
     description="Provide usage help for this build file.">
   <echo>
@@ -130,35 +105,25 @@
 
   </target>
 
-
-<!-- ======= Clean Target ======= -->
-
+<!-- ===== Clean Target ===== -->
 <!--
-
   The "clean" target deletes any previous "build" and "dist" directory,
   so that you can be ensured the application can be built from scratch.
-
 -->
-
   <target name="clean"
-   description="Delete old build and dist directories">
-    <delete dir="${build.home}"/>
-    <delete dir="${dist.home}"/>
+    description="Delete old build and dist directories">
+      <delete dir="${build.home}"/>
+      <delete dir="${dist.home}"/>
   </target>
 
-
-<!-- ======= create target ======= -->
-
+<!-- ===== create target ===== -->
 <!--
-
   The "create" target is used to create the project source directories
   and copy any standard static files from external sources.
 
   This is the first target to be executed when starting an new
   application. It should only be executed once.
-
 -->
-
   <target name="create"
     description="Create the application directories.">
 
@@ -167,35 +132,17 @@
     <mkdir dir="${web.home}/WEB-INF"/>
     <mkdir dir="${web.home}/WEB-INF/classes"/>
 
-    <!-- directories for Angular application -->
-    <mkdir dir="${web.home}/css" />
-    <mkdir dir="${web.home}/js" />
-    <mkdir dir="${web.home}/js/controllers" />
-    <mkdir dir="${web.home}/js/directives" />
-    <mkdir dir="${web.home}/js/filters" />
-    <mkdir dir="${web.home}/js/resources" />
-    <mkdir dir="${web.home}/js/services" />
-    <mkdir dir="${web.home}/js/vendor"/>
-
     <!-- Java source and documentation directories -->
     <mkdir dir="${src.home}" />
     <mkdir dir="${docs.home}" />
 
-    <!-- Copy static files from external dependencies as needed -->
-    <!-- *** CUSTOMIZE HERE AS REQUIRED BY YOUR APPLICATION *** -->
-
   </target>
 
-
-<!-- ======= prepare target ======= -->
-
+<!-- ===== Prepare Target ===== -->
 <!--
-
   The "prepare" target is used to create the "build" destination directory,
   and copy the static contents of your web application to it.
-
 -->
-
   <target name="prepare"
     description="Create build destication directory.">
 
@@ -209,22 +156,15 @@
       <fileset dir="${web.home}"/>
     </copy>
 
-    <!-- Copy static files from external dependencies as needed -->
-    <!-- *** CUSTOMIZE HERE AS REQUIRED BY YOUR APPLICATION *** -->
   </target>
 
-
-<!-- ======= Compile Target ======= -->
-
+<!-- ===== Compile Target ===== -->
 <!--
-
   The "compile" target transforms source files (from your "src" directory)
   into object files in the appropriate location in the build directory.
   This example assumes that you will be including your classes in an
   unpacked directory hierarchy under "/WEB-INF/classes".
-
 -->
-
   <target name="compile" depends="prepare"
    description="Compile Java sources">
 
@@ -241,14 +181,20 @@
     <copy  todir="${build.home}/WEB-INF/classes">
       <fileset dir="${src.home}" excludes="**/*.java"/>
     </copy>
-
   </target>
 
-
-<!-- ======= Dist Target ======= -->
-
+<!-- ===== GROOVY Compilation ===== -->
 <!--
+  Compile Groovy classes to build directory.
+-->
+   <target name="groovyCompile" depends="prepare"
+     description="Compile groovy sources">
+     <groovyc destdir="${build.home}/WEB-INF/classes" srcdir="${groovy.src}"
+       listfiles="true" classpathref="compile.classpath"/>
+   </target>
 
+<!-- ===== Dist Target ===== -->
+<!--
   The "dist" target creates a binary distribution of your application
   in a directory structure ready to be archived in a tar.gz or zip file.
   Note that this target depends on two others:
@@ -257,10 +203,9 @@
     dependencies) will have been assembled
 
   * "javadoc" so that the application Javadocs will have been created
-
 -->
 
-  <target name="dist" depends="compile"
+  <target name="dist" depends="compile,groovyCompile"
    description="Create binary distribution">
 
     <!-- Copy documentation subdirectories -->
@@ -273,40 +218,30 @@
     <jar jarfile="${dist.home}/${app.name}-${app.version}.war"
          basedir="${build.home}"/>
 
-    <!-- Copy additional files to ${dist.home} as necessary -->
-
   </target>
 
 
-<!-- ======= Run Target ======= -->
-
+<!-- ===== Run Target ===== -->
 <!--
-
     The "run" target runs the war application under jetty-runner
-
 -->
 <!--
     <target name = "run" depends="dist"
      description="Run the war application with jetty-runner">
-
         <java
             dir="${jetty.home}"
             jar="${jetty.home}/bin/jetty-runner.jar"
             fork="true">
             <arg value="${dist.home}/${app.name}-${app.version}.war" />
         </java>
-
      </target>
 -->
 
-<!-- ======= deploy Target ======= -->
-
+<!-- ===== deploy Target ===== -->
 <!--
-
     The "deploy" target copys the war application to webapps directory
-
+    defined by server.home property.
 -->
-
     <target name = "deploy" depends="dist"
      description="Deploy the war application to webapps directory">
 
