--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -68,6 +68,7 @@
     <welcome-file>index.jsf</welcome-file>
     <welcome-file>welcome.jsf</welcome-file>
     <welcome-file>index.html</welcome-file>
+    <welcome-file>index.xhtml</welcome-file>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
