--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
   <property name="src.home"      value="${basedir}/src/main/java"/>
   <property name="web.home"      value="${basedir}/src/main/webapp"/>
   <property name="server.home"   value="/home/richs/bin/jetty" />
-  <property name="groovy.src"    value="${basedir}/src/main/groovy" />
+  <property name="groovy.src"    value="${basedir}/src/main/java" />
 
 <!-- ==================== External Dependencies =========================== -->
 <!--
